# graphic_calculator

./: .gitignore  CMakeLists.txt  NEEDFIXES.txt  README.md  REAME.txt  analysis.h  back_func.cpp  back_func.h  backend.h  comments.md  frontend.h  graphic_window.cpp  graphic_window.h  main.cpp  structure.txt
UL_develop/: CMakeLists.txt  back_func.cpp  back_func.h  back_helpers.h  main.cpp  test.txt  test_out.txt
UL_develop/back_ideas/: backend.h  graphic_string.cpp  helpers.h  segments.cpp
backend/: CMakeLists.txt  analysis.cpp  back_func.cpp  back_func.h  back_helpers.h  backend.h  checkers.cpp  expose_dep_function.cpp  expose_dep_function.h  expose_func_str.cpp  expose_func_str.h  exposed_dep_function.cpp  exposed_dep_function.h  function.cpp  function.h  function_string.cpp  function_string.h  function_string_checkers.cpp  function_validation.cpp  functions.cpp  functions.h  graphic_window.cpp  graphic_window.h  main.cpp  math_function.cpp  math_function.h  math_function_validation.cpp  segment_methods.cpp  servant.h  temp_help.h  test.txt  test_out.txt
backend/Math_calc/: domain_segments.cpp  domain_segments.h  function_crosses.cpp  function_crosses.h  function_extremes.cpp  function_extremes.h  function_roots.cpp  function_roots.h  math_base.h
backend/Math_func/: expose_func_str.cpp  expose_func_str.h  function.cpp  function.h  function_validation.cpp
backend/servant/: constants.h  servant.cpp  servant.h
backend/utility/: constants.h  utilities.cpp  utilities.h
frontend/: axis.cpp  axis.h  constants.h  frontend.h  graphic_window.cpp  graphic_window.h  graphix_window.cpp  graphix_window.h  input_box.h  num_button.h  segmented_function.cpp  segmented_function.h  temp_help.h
frontend/Graph_lib/: GUI.cpp  GUI.h  Graph.cpp  Graph.h  Point.h  Shapes.cpp  Shapes.h  Widgets.cpp  Widgets.h  Window.cpp  Window.h  fltk.h
frontend/Graphix_calc/: Axis.cpp  Axis.h  Bothput_box.cpp  Bothput_box.h  Dext_box.cpp  Dext_box.h  Function_box.cpp  Function_box.h  Graphix.cpp  Graphix.h  Input_box.cpp  Input_box.h  Numbed_button.h  Numbered_button.h  Point_box.cpp  Point_box.h  Segmented_Graphix.cpp  Segmented_Graphix.h  Segmented_function.cpp  Segmented_function.h
frontend/graphix_window/: Graphix_window.cpp  Graphix_window.h  Graphix_window_callbacks.cpp  Graphix_window_init.cpp  Graphix_window_updaters.cpp
frontend/servant/: constants.h
frontend/utility/: constants.h  format.h  utilities.cpp  utilities.h
testing/: CMakeLists.txt  main.cpp  test.txt  test_out.txt
testing/test_backend/: backend.h  checkers.cpp  function_string.cpp  function_string.h  segment_methods.cpp  servant.h
